syntax = "proto3";

package koinos.v1;
option go_package = "github.com/odysseia-greek/makedonia/filippos/gen/go/koinos/v1;koinosv1";

// Keep this enum tiny for now; extend later if needed.
enum Language {
  LANGUAGE_UNSPECIFIED = 0;
  LANG_GREEK  = 1;
  LANG_ENGLISH = 2;
  LANG_DUTCH  = 3;
}

// Common search input many services can reuse.
message SearchQuery {
  string word = 1;        // e.g., "Ἀθηναῖος"
  Language language = 2;  // e.g., LANG_GREEK
  int32 numberOfResults = 3; // e.g., 3
}